meja/tests/implicits-fail.stderr
File "tests/implicits-fail.meja", line 5, characters 31-35:
Error: Unbound constructor true.
